# reinforcement-learning-textbook

./: .gitignore  CONTRIBUTING.md  README.md
.claude/skills/textbook-with-widgets/: SKILL.md
.claude/skills/textbook-with-widgets/examples/: chapter-template.md  exercise-template.js  widget-template.js
.claude/skills/textbook-with-widgets/references/: 01-syllabus.md  02-research.md  03-chapter-structure.md  04-mdbook-setup.md  05-latex-and-rendering.md  06-widgets-architecture.md  07-widget-authoring.md  08-glossary.md  09-rendering-bug-classes.md  10-widget-correctness-audit.md  11-exercise-authoring.md
.github/workflows/: textbook.yml
docs/designs/: interactive_textbook.md
docs/textbook/: 00_index.md  01_linear_algebra.md  02_probability_and_statistics.md  03_mathematics_for_ai.md  04_the_rl_problem.md  05_mdps_and_bellman_equations.md  06_dynamic_programming.md  07_monte_carlo_methods.md  08_temporal_difference_learning.md  09_eligibility_traces.md  10_function_approximation.md  11_deep_q_learning.md  12_policy_gradient.md  13_actor_critic.md  14_exploration.md  15_model_based_rl.md  16_hierarchical_rl.md  17_fa_pathologies.md  18_homeostatic_rl.md  19_long_horizon_credit.md  20_action_spaces.md  README.md  SUMMARY.md  bibliography.md  book.toml  reinforcement_learning_syllabus.md
docs/textbook/lint/: .gitignore  README.md  check.js  find_em_in_math.py  find_unprocessed_math.py  fix_blockquote_math.py  fix_display_math_paragraphs.py  fix_double_backslash.py  fix_matrix_rowsep.py  fix_opener_no_space.py  fix_repo_paths_in_md.py  package-lock.json  package.json  post_render_scan.js
docs/textbook/reference/: glossary.md
docs/textbook/theme/: head.hbs
docs/textbook/widgets/: AUTHORING.md
docs/textbook/widgets/ac_loss_decomp/: widget.js
docs/textbook/widgets/action_mask_softmax/: widget.js
docs/textbook/widgets/adam_step/: exercise.js
docs/textbook/widgets/adaptive_kl/: widget.js
docs/textbook/widgets/agent_loop/: widget.js
docs/textbook/widgets/attribution_spectrum_overlay/: widget.js
docs/textbook/widgets/baird_counterexample/: widget.js
docs/textbook/widgets/bandit_envs/: widget.js
docs/textbook/widgets/bellman_linear/: widget.js
docs/textbook/widgets/bellman_propagator/: widget.js
docs/textbook/widgets/bellman_sweep/: exercise.js
docs/textbook/widgets/bootstrapped_dqn/: widget.js
docs/textbook/widgets/catastrophic_interference/: widget.js
docs/textbook/widgets/causality_trick/: widget.js
docs/textbook/widgets/char_poly_explorer/: widget.js
docs/textbook/widgets/contraction/: widget.js
docs/textbook/widgets/convex_cost/: widget.js
docs/textbook/widgets/curriculum_crossover_chart/: widget.js
docs/textbook/widgets/deadly_triad/: widget.js
docs/textbook/widgets/det_signed_area/: widget.js
docs/textbook/widgets/diayn/: widget.js
docs/textbook/widgets/discount_factor/: widget.js
docs/textbook/widgets/discretization_regret/: widget.js
docs/textbook/widgets/distributional/: widget.js
docs/textbook/widgets/dot_projection/: widget.js
docs/textbook/widgets/drive_dynamics/: widget.js
docs/textbook/widgets/dueling/: widget.js
docs/textbook/widgets/dyna_budget/: widget.js
docs/textbook/widgets/dyna_n_efficiency/: widget.js
docs/textbook/widgets/dyna_q/: widget.js
docs/textbook/widgets/effective_horizon/: widget.js
docs/textbook/widgets/eigen_heatmap/: widget.js
docs/textbook/widgets/eigenvector/: widget.js
docs/textbook/widgets/eligibility_ribbon/: widget.js
docs/textbook/widgets/entropy_reg/: widget.js
docs/textbook/widgets/expected_sarsa/: widget.js
docs/textbook/widgets/explore_exploit_pareto/: widget.js
docs/textbook/widgets/exploring_starts/: widget.js
docs/textbook/widgets/four_rooms/: widget.js
docs/textbook/widgets/fwd_bwd_equivalence/: widget.js
docs/textbook/widgets/gae_lambda/: widget.js
docs/textbook/widgets/gamma_decay/: widget.js
docs/textbook/widgets/generalization/: widget.js
docs/textbook/widgets/gradient_descent/: widget.js
docs/textbook/widgets/grid_transform/: widget.js
docs/textbook/widgets/hash_collision/: widget.js
docs/textbook/widgets/hca_posterior/: widget.js
docs/textbook/widgets/her_relabel/: widget.js
docs/textbook/widgets/hessian/: widget.js
docs/textbook/widgets/hiro/: widget.js
docs/textbook/widgets/hoeffding/: widget.js
docs/textbook/widgets/hoeffding_ucb/: widget.js
docs/textbook/widgets/homeo_reward_landscape/: widget.js
docs/textbook/widgets/hppo_sampler/: widget.js
docs/textbook/widgets/is_variance/: widget.js
docs/textbook/widgets/jensen/: widget.js
docs/textbook/widgets/kl_trust_region/: widget.js
docs/textbook/widgets/lambda_return/: widget.js
docs/textbook/widgets/lambda_sweep_randomwalk/: widget.js
docs/textbook/widgets/learning_curve_overlay/: widget.js
docs/textbook/widgets/linear_combo/: widget.js
docs/textbook/widgets/live_mlp_xor/: widget.js
docs/textbook/widgets/lp_duality/: widget.js
docs/textbook/widgets/lstd_vs_sgd/: widget.js
docs/textbook/widgets/mahalanobis/: widget.js
docs/textbook/widgets/norm/: widget.js
widgets/: README.md
widgets/bandit/: Cargo.toml
widgets/bandit/src/: lib.rs
widgets/gridworld/: Cargo.toml
widgets/gridworld/src/: lib.rs
widgets/tile_coding/: Cargo.toml
widgets/tile_coding/src/: lib.rs
(+110 files in other folders)
