# Empty `[workspace]` makes this crate a standalone workspace root,
# detached from the main simulator workspace above. Widgets need this
# because they target wasm32-unknown-unknown with `crate-type=cdylib`,
# which would interfere with the simulator's native build cache.
[workspace]

[package]
name = "widget-bandit"
version = "0.1.0"
edition = "2021"
publish = false

# Interactive widget for Chapter 12 (Exploration). Exposes an
# ε-greedy bandit trainer to JS so a reader can adjust the bandit's
# arms, the exploration ε, and the learning rate α, then watch the
# learner's best-arm-pull fraction climb over an episode.
#
# Built with `wasm-pack build --target web --release` into `pkg/`.
# The chapter's HTML loads `pkg/widget_bandit.js` as an ES module.

[lib]
crate-type = ["cdylib"]
doctest = false

[features]
default = []

[dependencies]
# The playground crate provides `MultiArmedBandit`, `run_episode`, and
# the canonical ε-greedy + TD-update loop. Reused as-is — no
# reimplementation. Both deps need `default-features = false` because
# this widget is a standalone workspace; the main simulator workspace
# default (Bevy-free) doesn't reach here.
playground = { git = "https://github.com/falahat/rl-core.git", rev = "f9c7fcedf63324b3e4e80b0d6ac9326a42e05d42", default-features = false }
rl_core = { git = "https://github.com/falahat/rl-core.git", rev = "f9c7fcedf63324b3e4e80b0d6ac9326a42e05d42", default-features = false }

# Standard wasm-bindgen glue. `js-sys` for JS interop; `web-sys` for
# DOM access (canvas drawing + input handling).
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "Document",
  "Element",
  "HtmlElement",
  "HtmlCanvasElement",
  "HtmlInputElement",
  "CanvasRenderingContext2d",
  "Window",
  "console",
] }
