# Empty `[workspace]` makes this crate a standalone workspace root,
# detached from the main simulator workspace above. Widgets need this
# because they target wasm32-unknown-unknown with `crate-type=cdylib`,
# which would interfere with the simulator's native build cache.
[workspace]

[package]
name = "widget-gridworld"
version = "0.1.0"
edition = "2021"
publish = false

# Interactive widget for Chapter 6 (Temporal Difference Learning).
# Trains tile-coded Q-learning over a 5×5 GridWorld across N episodes and
# renders the resulting state-value heatmap (max_a Q(s, a)) as the
# textbook reader adjusts ε, α, γ, and episode count.
#
# Built with `wasm-pack build --target web --release` into `pkg/`.
# The chapter's HTML loads `pkg/widget_gridworld.js` as an ES module.

[lib]
crate-type = ["cdylib"]
doctest = false

[features]
default = []

[dependencies]
# The playground crate provides `GridWorld`, `GridAction`, `run_episode`,
# and the canonical ε-greedy + TD-update loop. Reused as-is — no
# reimplementation. Both deps need `default-features = false` because
# this widget is a standalone workspace; the main simulator workspace
# default (Bevy-free) doesn't reach here.
playground = { path = "../../crates/engine/playground", default-features = false }
rl_core = { path = "../../crates/engine/rl_core", default-features = false }

# Standard wasm-bindgen glue. `js-sys` for JS interop; `web-sys` for
# DOM access (canvas drawing + input handling).
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "Document",
  "Element",
  "HtmlElement",
  "HtmlCanvasElement",
  "HtmlInputElement",
  "CanvasRenderingContext2d",
  "Window",
  "console",
] }
